--- a/package.json
+++ b/package.json
@@ -9,18 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.1.1",
+    "@reduxjs/toolkit": "^1.8.6",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
-    "react-native": "0.71.8"
+    "react-dom": "18.2.0",
+    "react-native": "0.71.8",
+    "react-native-web": "~0.18.9",
+    "react-redux": "^8.0.4",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@react-native-community/eslint-config": "^3.1.0",
     "@tsconfig/react-native": "^3.0.2",
     "@types/jest": "^29.5.3",
-    "@types/react": "^18.2.14",
+    "@types/react": "^18.0.27",
+    "@types/react-native": "~0.69.1",
     "@types/react-test-renderer": "^18.0.0",
-    "typescript": "^5.1.6"
+    "@types/redux-logger": "^3.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.41.0",
+    "@typescript-eslint/parser": "^5.41.0",
+    "eslint": "^8.26.0",
+    "eslint-config-universe": "^11.1.0",
+    "prettier": "^2.7.1",
+    "typescript": "^4.9.4"
   },
   "private": true
 }
