--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ticket-connect",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -18,7 +18,13 @@
     "react-native": "0.71.8",
     "react-native-web": "~0.18.9",
     "react-redux": "^8.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "expo-router": "^1.0.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "expo-linking": "~4.0.1",
+    "expo-constants": "~14.2.1",
+    "react-native-gesture-handler": "~2.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +41,10 @@
     "eslint-config-universe": "^11.1.0",
     "prettier": "^2.7.1",
     "typescript": "^4.9.4"
+  },
+  "overrides": {
+    "metro": "0.76.0",
+    "metro-resolver": "0.76.0"
   },
   "private": true
 }
